--- a/styles.css
+++ b/styles.css
@@ -21,6 +21,9 @@
     padding: 0 24px;
     border-bottom: 1px solid var(--very-light-pink);
   }
+  .navbar-left ul li a {
+    cursor: pointer;
+  }
   .menu {
     display: none;
   }
