--- a/styles.css
+++ b/styles.css
@@ -167,6 +167,8 @@
     box-sizing: border-box;
     position: absolute;
     right: 0;
+    z-index: 10; /* Z-index más alto para el carrito */
+
   }
   .title-container {
     display: flex;
@@ -217,12 +219,41 @@
     border-radius: 20px;
     object-fit: cover;
   }
-  .shopping-cart p:nth-child(2) {
+  .estilo-dinamico-nombre {
     color: var(--very-light-pink);
   }
-  .shopping-cart p:nth-child(3) {
+  .product-price-container p {
+    display: inline-block;
+
+  }
+  .estilo-dinamico-symbol {
     font-size: var(--md);
     font-weight: bold;
+
+  }
+  .estilo-dinamico-precio {
+    font-size: var(--md);
+    font-weight: bold;
+  }
+  figure {
+    position: relative;
+  }
+
+  figure img {
+    display: block ; 
+  }
+  figure p {
+    position: absolute;
+    top: -10px; 
+    right: -10px;
+    background-color: var(--hospital-green);
+    width: 20px;
+    height: 20px;
+    color: var(--white);
+    border-radius: 50%; 
+    text-align: center;
+    line-height: 20px;         /* Centra verticalmente el número */
+    font-size: 12px;
   }
   .primary-button {
     background-color: var(--hospital-green);
@@ -268,82 +299,87 @@
     height: 35px;
   }
   .product-info div p:nth-child(1) {
+    display: inline-block;
+    font-weight: bold;
+    font-size: var(--md);
+    margin-top: 0;
+    margin-bottom: 4px;
+    margin-right: 5px;
+  }
+  .product-info div p:nth-child(2) {
+    display: inline-block;
+    font-size: var(--sm);
+    margin-top: 0;
+    margin-bottom: 0;
+    color: var(--very-light-pink);
+    z-index: 5; /* Z-index más bajo para el botón */
+
+  }
+  /*PRODUCT DETAIL SECONDARY*/
+
+  .product-detail-secondary {
+    width: 360px;
+    padding-bottom: 24px;
+    position: absolute;
+    right: 0;
+  }
+  .product-detail-close {
+    background: var(--white);
+    width: 14px;
+    height: 14px;
+    position: absolute;
+    top: 24px;
+    left: 24px;
+    z-index: 2;
+    padding: 12px;
+    border-radius: 50%;
+  }
+  .product-detail-close:hover {
+    cursor: pointer;
+  }
+  .product-detail-secondary > img:nth-child(2) {
+    width: 100%;
+    height: 360px;
+    object-fit: cover;
+    border-radius: 0 0 20px 20px;
+  }
+  .product-info-secondary {
+    margin: 24px 24px 0 24px;
+  }
+  .product-info-secondary p:nth-child(1) {
     font-weight: bold;
     font-size: var(--md);
     margin-top: 0;
     margin-bottom: 4px;
   }
-  .product-info div p:nth-child(2) {
+  .product-info-secondary p:nth-child(2) {
+    color: var(--very-light-pink);
+    font-size: var(--md);
+    margin-top: 0;
+    margin-bottom: 36px;
+  }
+  .product-info-secondary p:nth-child(3) {
+    color: var(--very-light-pink);
     font-size: var(--sm);
     margin-top: 0;
-    margin-bottom: 0;
-    color: var(--very-light-pink);
+    margin-bottom: 36px;
   }
-/*PRODUCT DETAIL SECONDARY*/
-
-.product-detail-secondary {
-  width: 360px;
-  padding-bottom: 24px;
-  position: absolute;
-  right: 0;
-}
-.product-detail-close {
-  background: var(--white);
-  width: 14px;
-  height: 14px;
-  position: absolute;
-  top: 24px;
-  left: 24px;
-  z-index: 2;
-  padding: 12px;
-  border-radius: 50%;
-}
-.product-detail-close:hover {
-  cursor: pointer;
-}
-.product-detail-secondary > img:nth-child(2) {
-  width: 100%;
-  height: 360px;
-  object-fit: cover;
-  border-radius: 0 0 20px 20px;
-}
-.product-info-secondary {
-  margin: 24px 24px 0 24px;
-}
-.product-info-secondary p:nth-child(1) {
-  font-weight: bold;
-  font-size: var(--md);
-  margin-top: 0;
-  margin-bottom: 4px;
-}
-.product-info-secondary p:nth-child(2) {
-  color: var(--very-light-pink);
-  font-size: var(--md);
-  margin-top: 0;
-  margin-bottom: 36px;
-}
-.product-info-secondary p:nth-child(3) {
-  color: var(--very-light-pink);
-  font-size: var(--sm);
-  margin-top: 0;
-  margin-bottom: 36px;
-}
-.primary-button {
-  background-color: var(--hospital-green);
-  border-radius: 8px;
-  border: none;
-  color: var(--white);
-  width: 100%;
-  cursor: pointer;
-  font-size: var(--md);
-  font-weight: bold;
-  height: 50px;
-}
-.add-to-cart-button {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
+  .primary-button {
+    background-color: var(--hospital-green);
+    border-radius: 8px;
+    border: none;
+    color: var(--white);
+    width: 100%;
+    cursor: pointer;
+    font-size: var(--md);
+    font-weight: bold;
+    height: 50px;
+  }
+  .add-to-cart-button {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
   
   @media (max-width: 640px) {
     .menu {
